--- a/src/index.css
+++ b/src/index.css
@@ -56,3 +56,11 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+hr { 
+	display: block; 
+	height: 1px;
+	border: 0; 
+	border-top: 1px solid #E5E5E5; 
+	padding: 0; 
+}
