--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,32 @@ code {
     monospace;
 }
 
+@font-face {
+  font-family: 'Suisse Works';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../src/fonts/SuisseWorks-Regular-WebS.eot'); /* IE9 Compat Modes */
+  src: local('Suisse Works'), local('Suisse Works'),
+       url('../src/fonts/SuisseWorks-Regular-WebS.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../src/fonts/SuisseWorks-Regular-WebS.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../src/fonts/SuisseWorks-Regular-WebS.woff') format('woff'), /* Modern Browsers */
+       url('../src/fonts/SuisseWorks-Regular-WebS.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../src/fonts/SuisseWorks-Regular-WebS.svg#OpenSans') format('svg'); /* Legacy iOS */
+}
+
+@font-face {
+  font-family: 'Suisse Works Intl';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../src/fonts/SuisseIntl-Book-WebM.eot'); /* IE9 Compat Modes */
+  src: local('Suisse Works'), local('Suisse Works'),
+       url('../src/fonts/SuisseIntl-Book-WebM.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../src/fonts/SuisseIntl-Book-WebM.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../src/fonts/SuisseIntl-Book-WebM.woff') format('woff'), /* Modern Browsers */
+       url('../src/fonts/SuisseIntl-Book-WebM.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../src/fonts/SuisseIntl-Book-WebM.svg#OpenSans') format('svg'); /* Legacy iOS */
+}
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -35,11 +61,15 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
   line-height: 1;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  font-family: Suisse Works,	-apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
   "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
   sans-serif;
 -webkit-font-smoothing: antialiased;
 -moz-osx-font-smoothing: grayscale;
+}
+a{
+	text-decoration: none;
+	color: #000;
 }
 ol, ul {
 	list-style: none;
