--- a/src/index.css
+++ b/src/index.css
@@ -92,5 +92,10 @@ hr {
 	height: 1px;
 	border: 0; 
 	border-top: 1px solid #E5E5E5; 
-	padding: 0; 
+  padding: 0; 
+  margin: 0;
+}
+
+img{
+  display: block;
 }
