--- a/src/index.css
+++ b/src/index.css
@@ -9,98 +9,187 @@ code {
 }
 
 @font-face {
-  font-family: 'Suisse Works';
+  font-family: "Suisse Works";
   font-style: normal;
   font-weight: 400;
-  src: url('../src/fonts/SuisseWorks-Regular-WebS.eot'); /* IE9 Compat Modes */
-  src: local('Suisse Works'), local('Suisse Works'),
-       url('../src/fonts/SuisseWorks-Regular-WebS.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../src/fonts/SuisseWorks-Regular-WebS.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../src/fonts/SuisseWorks-Regular-WebS.woff') format('woff'), /* Modern Browsers */
-       url('../src/fonts/SuisseWorks-Regular-WebS.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../src/fonts/SuisseWorks-Regular-WebS.svg#OpenSans') format('svg'); /* Legacy iOS */
+  src: url("../src/fonts/SuisseWorks-Regular-WebS.eot"); /* IE9 Compat Modes */
+  src: url("../src/fonts/SuisseWorks-Regular-WebS.eot") format("eot"),
+    url("../src/fonts/SuisseWorks-Regular-WebS.eot?#iefix")
+      format("embedded-opentype"),
+    /* IE6-IE8 */ url("../src/fonts/SuisseWorks-Regular-WebS.woff2")
+      format("woff2"),
+    /* Super Modern Browsers */
+      url("../src/fonts/SuisseWorks-Regular-WebS.woff") format("woff"),
+    /* Modern Browsers */ url("../src/fonts/SuisseWorks-Regular-WebS.ttf")
+      format("truetype"),
+    /* Safari, Android, iOS */
+      url("../src/fonts/SuisseWorks-Regular-WebS.svg#OpenSans") format("svg"); /* Legacy iOS */
 }
 
 @font-face {
-  font-family: 'Suisse Works Intl';
+  font-family: "Suisse Works Intl";
   font-style: normal;
   font-weight: 400;
-  src: url('../src/fonts/SuisseIntl-Book-WebM.eot'); /* IE9 Compat Modes */
-  src: local('Suisse Works'), local('Suisse Works'),
-       url('../src/fonts/SuisseIntl-Book-WebM.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../src/fonts/SuisseIntl-Book-WebM.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../src/fonts/SuisseIntl-Book-WebM.woff') format('woff'), /* Modern Browsers */
-       url('../src/fonts/SuisseIntl-Book-WebM.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../src/fonts/SuisseIntl-Book-WebM.svg#OpenSans') format('svg'); /* Legacy iOS */
+  src: url("../src/fonts/SuisseIntl-Book-WebM.eot"); /* IE9 Compat Modes */
+  src: url("../src/fonts/SuisseWorks-Regular-WebS.eot") format("eot"),
+    url("../src/fonts/SuisseIntl-Book-WebM.eot?#iefix")
+      format("embedded-opentype"),
+    /* IE6-IE8 */ url("../src/fonts/SuisseIntl-Book-WebM.woff2") format("woff2"),
+    /* Super Modern Browsers */ url("../src/fonts/SuisseIntl-Book-WebM.woff")
+      format("woff"),
+    /* Modern Browsers */ url("../src/fonts/SuisseIntl-Book-WebM.ttf")
+      format("truetype"),
+    /* Safari, Android, iOS */
+      url("../src/fonts/SuisseIntl-Book-WebM.svg#OpenSans") format("svg"); /* Legacy iOS */
 }
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
 body {
   line-height: 1;
-  font-family: Suisse Works,	-apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-  "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-  sans-serif;
--webkit-font-smoothing: antialiased;
--moz-osx-font-smoothing: grayscale;
+  font-family: Suisse Works, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+    "Helvetica Neue", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
-a{
-	text-decoration: none;
-	color: #000;
+a {
+  text-decoration: none;
+  color: #000;
 }
-ol, ul {
-	list-style: none;
+ol,
+ul {
+  list-style: none;
 }
-blockquote, q {
-	quotes: none;
+blockquote,
+q {
+  quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
 }
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
-hr { 
-	display: block; 
-	height: 1px;
-	border: 0; 
-	border-top: 1px solid #E5E5E5; 
-  padding: 0; 
+hr {
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #e5e5e5;
+  padding: 0;
   margin: 0;
 }
 
-img{
+img {
   display: block;
 }
 
-.is-active{
+.is-active {
   font-style: italic;
-
 }
