--- a/src/index.css
+++ b/src/index.css
@@ -194,31 +194,13 @@ img {
   font-style: italic;
 }
 
-@keyframes fadein {
-  from { opacity: 0; }
-  to   { opacity: 1; }
+.fadeOut{
+  opacity:0;
+  transition: width 0.5s, height 0.5s, opacity 0.3s;
+  visibility: hidden;
 }
-
-/* Firefox < 16 */
-@-moz-keyframes fadein {
-  from { opacity: 0; }
-  to   { opacity: 1; }
-}
-
-/* Safari, Chrome and Opera > 12.1 */
-@-webkit-keyframes fadein {
-  from { opacity: 0; }
-  to   { opacity: 1; }
-}
-
-/* Internet Explorer */
-@-ms-keyframes fadein {
-  from { opacity: 0; }
-  to   { opacity: 1; }
-}
-
-/* Opera < 12.1 */
-@-o-keyframes fadein {
-  from { opacity: 0; }
-  to   { opacity: 1; }
+.fadeIn{
+  opacity:1;
+  transition: width 0.5s, height 0.5s, opacity 0.3s;
+  visibility: visible;
 }
