--- a/src/index.css
+++ b/src/index.css
@@ -204,3 +204,31 @@ img {
   visibility: visible;
   transition: visibility 0.3s, opacity 0.3s;
 }
+
+.ril__toolbar{
+  background: 0 !important;
+}
+
+.ril__outer{
+  background-color: rgba(255, 255, 255, 0.85) !important;
+}
+
+.ril__toolbarRightSide{
+  padding-right: 0 !important;
+  padding-top: 10px !important;
+}
+
+.ril__closeButton{
+  background: url(assets/close.svg) no-repeat !important;
+  background-size: 60% 60% !important;
+}
+
+.ril__navButtonPrev{
+  background: url(assets/previous.svg) no-repeat !important;
+  background-size: 80% 80% !important;
+}
+
+.ril__navButtonNext{
+  background: url(assets/next.svg) no-repeat !important;
+  background-size: 80% 80% !important;
+}
