--- a/src/index.css
+++ b/src/index.css
@@ -186,6 +186,14 @@ hr {
   margin: 0;
 }
 
+iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 .individual-project img {
   padding: 8px;
 }
